test/sema/negative/trait_impls1.impala
trait T {
   fn f(self: Self) -> i32;
}
impl T for bool {
   fn f(self: i32) -> i32 {
      self
   }
}
